[gd_scene load_steps=27 format=3 uid="uid://cdk6hwb4hi2wc"]

[ext_resource type="Script" uid="uid://ng6e5hcmr50k" path="res://Scenes/PlayerPrefab/score_manager.gd" id="1_ocky0"]
[ext_resource type="Script" uid="uid://b0vmaoolrxomi" path="res://Scenes/PlayerPrefab/health_node.gd" id="2_4627e"]
[ext_resource type="Script" uid="uid://cb41hdfg0fmn0" path="res://Scenes/PlayerPrefab/State Machine/StateMachine.gd" id="3_0krwt"]
[ext_resource type="Script" uid="uid://c4rkm2sxdy74s" path="res://Scenes/PlayerPrefab/State Machine/IdleState.gd" id="4_i7qhu"]
[ext_resource type="Script" uid="uid://buqnkp70sp7dk" path="res://Scenes/PlayerPrefab/State Machine/WalkingState.gd" id="5_v8a3j"]
[ext_resource type="Script" uid="uid://t4otr5gpcrih" path="res://Scenes/PlayerPrefab/State Machine/JumpingState.gd" id="6_6tkae"]
[ext_resource type="Script" uid="uid://b0ouuxk4jg60m" path="res://Scenes/PlayerPrefab/State Machine/CrouchingState.gd" id="7_kxw5e"]
[ext_resource type="Script" uid="uid://dcv06dgugpeoq" path="res://Scenes/PlayerPrefab/State Machine/SprintState.gd" id="8_2br0o"]
[ext_resource type="Script" uid="uid://cx12hde3gcntt" path="res://Scenes/PlayerPrefab/State Machine/SlidingState.gd" id="9_tx7lc"]
[ext_resource type="Script" uid="uid://vbymdk5epmmy" path="res://Scenes/PlayerPrefab/InteractionNode.gd" id="10_m74bs"]
[ext_resource type="PackedScene" uid="uid://5heudqfdw5i3" path="res://Scenes/PlayerPrefab/inventory_node.tscn" id="11_71xcm"]
[ext_resource type="Texture2D" uid="uid://cix4ejldrmkra" path="res://Scenes/PlayerPrefab/unknown.png" id="12_2uhjx"]
[ext_resource type="AudioStream" uid="uid://b3k110sd6yf1a" path="res://Scenes/PlayerPrefab/Sounds/grass_random_sounds.tres" id="13_ocky0"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4flbx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4flbx"]
albedo_color = Color(0.323103, 0.533137, 0.999997, 1)

[sub_resource type="SphereMesh" id="SphereMesh_onrkg"]
material = SubResource("StandardMaterial3D_4flbx")
radius = 0.2
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i3pqv"]
albedo_color = Color(0.321569, 0.533333, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_hqtel"]
material = SubResource("StandardMaterial3D_i3pqv")
radius = 0.2
height = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_f1ek2"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3vyb7"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Anchor/Camera:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Anchor:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("InventoryNode:active_slot")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("AnimationPlayer:current_animation")
properties/4/spawn = true
properties/4/replication_mode = 0
properties/5/path = NodePath("StateMachine:sync_pos")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_3vyb7"]
font_size = 32
font_color = Color(1, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qhqgy"]
font_size = 29
font_color = Color(1, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_vgqql"]
resource_name = "Crouching"
length = 0.25
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.25, 1, 1, 0.5, 1)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, 0.25, 1, 0, 0.5, 0)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Anchor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 1.51667, 0, 0.25, 1, 0, 0.75, 0)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("CollisionShapeStanding")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 1, 0, 0.25, 1, 0, 0.5, 0)
tracks/4/type = "scale_3d"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("CollisionShapeStanding")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.25, 1, 1, 0.5, 1)

[sub_resource type="Animation" id="Animation_fkybt"]
length = 0.001
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1.51667, 0)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShapeStanding")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 1, 0)

[sub_resource type="Animation" id="Animation_tx1dd"]
resource_name = "Sliding"
length = 0.2
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.2, 1, 1, 0.5, 1)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1, 0, 0.2, 1, 0, 0.5, 0)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Anchor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 1.51667, 0, 0.2, 1, 0, 0.75, 0)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("CollisionShapeStanding")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 1, 0, 0.2, 1, 0, 0.5, 0)
tracks/4/type = "scale_3d"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("CollisionShapeStanding")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.2, 1, 1, 0.5, 1)
tracks/5/type = "rotation_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.2, 1, 0.423, 0, 0, 0.906)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3wgy"]
_data = {
&"Crouching": SubResource("Animation_vgqql"),
&"RESET": SubResource("Animation_fkybt"),
&"Sliding": SubResource("Animation_tx1dd")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 2

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource("1_ocky0")

[node name="HealthNode" type="Node" parent="."]
script = ExtResource("2_4627e")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "player")]
script = ExtResource("3_0krwt")
initial_state = NodePath("Idle")
player = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_i7qhu")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("5_v8a3j")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("6_6tkae")

[node name="Crouching" type="Node" parent="StateMachine"]
script = ExtResource("7_kxw5e")

[node name="Sprinting" type="Node" parent="StateMachine"]
script = ExtResource("8_2br0o")

[node name="Sliding" type="Node" parent="StateMachine"]
script = ExtResource("9_tx7lc")

[node name="DebugLabel" type="Label" parent="."]
offset_left = 21.0
offset_top = 413.0
offset_right = 198.0
offset_bottom = 436.0

[node name="InteractionNode" type="Node3D" parent="."]
script = ExtResource("10_m74bs")

[node name="InventoryNode" parent="." instance=ExtResource("11_71xcm")]
default_inventory_logo = ExtResource("12_2uhjx")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_4flbx")
skeleton = NodePath("../CollisionShapeStanding")

[node name="LeftEye" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.169197, 0.459558, -0.399165)
mesh = SubResource("SphereMesh_onrkg")
skeleton = NodePath("../..")

[node name="RightEye" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.119496, 0.485091, -0.430151)
mesh = SubResource("SphereMesh_hqtel")
skeleton = NodePath("../LeftEye")

[node name="CollisionShapeStanding" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_f1ek2")

[node name="Anchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51667, 0)

[node name="Camera" type="Camera3D" parent="Anchor" groups=["player_cam"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.55369)
current = true
fov = 80.0

[node name="RayCast3D" type="RayCast3D" parent="Anchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.790801)
target_position = Vector3(0, 0, -4)
collision_mask = 19
hit_back_faces = false

[node name="Marker3D" type="Marker3D" parent="Anchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.36206)

[node name="ActiveItemSpot" type="Marker3D" parent="Anchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.572529, -0.362833, -1.58722)

[node name="floorRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.588879, 0)
target_position = Vector3(0, -2, 0)
hit_from_inside = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3vyb7")

[node name="HostPeer" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "HOST"
label_settings = SubResource("LabelSettings_3vyb7")

[node name="CurrentState" type="Label" parent="."]
offset_left = 279.0
offset_top = 8.0
offset_right = 419.0
offset_bottom = 48.0
label_settings = SubResource("LabelSettings_qhqgy")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.111258, 0)
stream = ExtResource("13_ocky0")
volume_db = -17.0
unit_size = 9.0
max_distance = 25.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x3wgy")
}
